@@ -19,7 +19,7 @@
  *
  *  (C) 1988 University of Oulu,Computing Center and Jarkko Oikarinen"
  *
- *  $Id: s_conf.c,v 1.218 2001/11/29 15:25:55 db Exp $
+ *  $Id: s_conf.c,v 1.219 2001/11/30 03:53:22 db Exp $
  */
 #include "m_commands.h"
 #include "s_conf.h"
@@ -2691,6 +2691,11 @@ static struct ConfItem* find_tkline(const char* host, const char* user, unsigned
                   tmp_list_ptr = last_list_ptr->next = kill_list_ptr->next;
                 }
 
+              /* Alert opers that a TKline expired - Hwy */
+              sendto_realops("Temporary K-line for [%s@%s] expired",
+                             (kill_list_ptr->user) ? kill_list_ptr->user : "*",
+                             (kill_list_ptr->host) ? kill_list_ptr->host : "*");
+
               free_conf(kill_list_ptr);
               kill_list_ptr = tmp_list_ptr;
             }
@@ -2725,11 +2730,6 @@ static struct ConfItem* find_tkline(const char* host, const char* user, unsigned
                   /* its in the middle of the list, so link around it */
                   tmp_list_ptr = last_list_ptr->next = kill_list_ptr->next;
                 }
-
-              /* Alert opers that a TKline expired - Hwy */
-              sendto_realops("Temporary K-line for [%s@%s] expired",
-                             (kill_list_ptr->user) ? kill_list_ptr->user : "*",
-                             (kill_list_ptr->host) ? kill_list_ptr->host : "*");
 
               /* Alert opers that a TKline expired - Hwy */
               sendto_realops("Temporary K-line for [%s@%s] expired",
